--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "nu_plugin_nuts"
 version = "0.1.0"
 edition = "2024"
+keywords = ["nats", "nushell", "nu", "plugin"]
 
 [dependencies]
 anyhow = "1"
